--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+    网易云解析
+    By 狱杰
+    Link: https://github.com/obentnet/neteasemusic
+-->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -31,13 +36,22 @@
     </div>
 
     <div class="title-des">
-        <div class="title">Ready for this.</div>
+        <div class="title">Just...</div>
         <form action="./core.php" method="get">
             <div class="mdui-textfield">
                 请输入歌曲ID<input value="1370108692" name="id" class="mdui-textfield-input" type="number" placeholder="Song ID"/>
             </div>
             <button class="mdui-btn mdui-btn-block mdui-color-red-700 mdui-ripple" id="open">解析</button>
         </form>
+    </div>
+    <div class="help">
+        <h3>Q: 不知道如何获取歌曲ID.</h3>
+        本页右上角有搜索按钮,点进去进入网易云搜索,搜索你想要下载的歌曲,然后点进去,<br/>
+        会发现地址栏内有一串 ?id=[数字]  的地址,复制数字后在上面粘贴即可
+        <h3>Q: 下载失败</h3>
+        下载失败一般为会员歌曲,当前本站暂不提供会员歌曲下载。请<font style="color:red;">支持正版</font>
+        <h3>Q: 能不能搜歌名获取</h3>
+        当然可以,在后续维护中我会加入这个功能.
     </div>
 
     <footer>
